lab1/Test/L1-A-12-71.output
Error Type B at Line 12
Error Type A at Line 22
Error Type A at Line 31
Error Type B at Line 36
Error Type B at Line 40
Error Type B at Line 55
