lab1/Test/L1-A-12-71.cmm
int ZWfzQalstj6tQJ [ 1162976144 ] 
;
struct {
}m6gF_y ( struct Peq8gLFuad1M5IQ {
  struct btuV5sZOsX_2S MzEQRUInGXFxy ;
  int ngRySSFJ ;
  struct SA0A7ks i7rP = kgpiF1 = QwPvHJ_3 && FZojnwyhy3K 
    * ! _4 ( DmP1MgJt3Zv2mxrLyea || wY <= d2CkB6ns - tN4snP 
    * ! bmJ0s2 [ vg49gek1DKcJCUk || G23sK < yxzipH1deC 
    ( ipp7b4hkWU5cRfv0tdU7 , IskWV_JOUYe >= ( cM7voZ47r3QPNUgFm4OU 
    && DdfkHsy02T1 > ! - ! ( oMUuiVCBRJEO0IBf == Xo9uwho0Pj0rYjDnW06c 
    ) / ! ! x7D4E1t ) != 762142240.454363950 - - ) ] + 
    bdJMZE3iFEs ( ) . ibNm0BeCH3up6FiyUB1 ) / - PaXrTh 
    , Fo ;
}N1k5pu7oMR , float qQ ) {
}
int ;
int vua4DDrvsX ( ) {
  while ( Ii7n )   while ( F2OSEk1 )   q ;


  if ( pqj1 )   if ( mH54KPNQvvWld1T ) ${
    _e0ASrkHhbjW2FZsI2Q ;
  }else   while ( xk_LUROfwxzy )   return qmH5 ;



}
int ;
int ;
int ;&
int ;
int ;
int ;
int 
int ;
int ;
int gedbb_MwjD2VPq , 

;
int ;
int pBGB98kOS ( ) {
}
int fRBpRLa8fupUmgnPoxlL ( ) {
{
    vmWtHwrR12EFkkJyloY9 ;
    HeCDx6kwFYCadaYam9T5 ;
    if ( whawBLPftp )     oUy ;
else     if ( KloAmc7fUP1Kgk8zYY57 )     qqO ;


    o0SKHF4imIM ;
    Rox9PdNJ ;
  }}
int OAdq_SvZ ( ) }
